backend/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /feedback
            pathType: Prefix
            backend:
              service:
                name: feedback-service
                port:
                  number: 80
